maze.lessons.maze.randommouse.RandomMouseMaze.scala.code
def sortie():Boolean = {
    	if (estSurBaggle()){
    		return true
    	}
    	return false
}
override def run() {
    while (!sortie()){
    	var x = random3()
    	if ((x == 0) && (!estFaceMur)){
    		avance()
    	}
    	if (x == 1){
    		gauche()
    	}
    	if (x == 2){
    		droite()
    	}
    }
}
